# My_Neural_Network

./: .gitignore  Activ_derivatives.cpp  Activ_derivatives.h  Activation_derivatives.cpp  Activation_derivatives.h  Activations.cpp  Activations.h  CMakeLists.txt  Core.h  CrazyMath.cpp  CrazyMath.h  DataFunc.cpp  DataFunc.h  DataUtils.cpp  DataUtils.h  Dataset.cpp  Dataset.h  LICENSE  Layer.cpp  Layer.h  Matrix.cpp  Matrix.h  Network.cpp  Network.h  Networks.cpp  Networks.h  Neurons.cpp  Neurons.h  README.md  TODO  TODO.md  Utils.cpp  Utils.h  base.json  base1.json  create_dataset.cpp  fruits_dataset.txt  huh  input_data.txt  json.h  (+8 more)
Network/: Activations.h  Matrix.cpp  Matrix.h  Network.cpp  Network.h  Neurons.cpp  Utils.cpp  Utils.h  json.h
